tests/invalid/annotation_forward_ref_string_expr_list/main.py
def run_case() -> None:
    bad: "list[int]" = 1


if __name__ == "__main__":
    run_case()
